# sPVirit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
pva-codec/: Cargo.toml
pva-codec/src/: epics_decode.rs  lib.rs  pva_encode.rs  pva_state.rs  pvd_decode.rs  pvd_encode.rs
pva-tools/: Cargo.toml
pva-tools/src/: lib.rs
pva-tools/src/pva_client/: client.rs  explore.rs  format.rs  put_encode.rs  search.rs  transport.rs  types.rs
pva-tools/src/pva_server/: db.rs  state.rs  types.rs
pva-tools/tests/: interop_pvaccess_java.rs  interop_tool_matrix.rs  pva_get.rs  pva_nt_codec.rs  pva_nt_lifecycle.rs  pva_protocol_codec.rs  pva_protocol_lifecycle.rs  pva_protocol_matrix.rs  pva_protocol_unsupported.rs  pva_pvlist.rs  pva_record_array.rs  pva_search_resilience.rs  pvexplore_client.rs
pva-tools/tests/interop/: epics_base.rs  harness.rs
pva-tools/tests/protocol/: frame_harness.rs  mod.rs  scenario_harness.rs
pva-types/: Cargo.toml
spvirit-client/: Cargo.toml
spvirit-client/examples/: pvget.rs  pvmonitor.rs  pvput.rs
spvirit-client/src/: auth.rs  client.rs  format.rs  lib.rs  put_encode.rs  pva_client.rs  pvlist.rs  search.rs  transport.rs  types.rs
spvirit-codec/: Cargo.toml
spvirit-codec/examples/: decode_packet.rs
spvirit-codec/src/: encode_common.rs  epics_decode.rs  lib.rs  spvd_decode.rs  spvd_encode.rs  spvirit_encode.rs  spvirit_state.rs
spvirit-py/: Cargo.toml
spvirit-py/examples/: demo.py  demo_channel.py  demo_channel_async.py  demo_codec.py  demo_discovery.py  demo_nt_access.py  demo_raw_frames.py  demo_server.py  demo_source_aggregate.py  demo_source_async.py  demo_source_multi.py  demo_source_passthrough.py  demo_source_rpc.py  demo_source_sensor.py  demo_source_wildcard.py  demo_stress.py
spvirit-py/src/: channel.rs  client.rs  codec.rs  convert.rs  discovery.rs  errors.rs  lib.rs  nt.rs  packet.rs  runtime.rs  server.rs  source.rs
spvirit-server/: Cargo.toml
spvirit-server/examples/: aggregate_source.rs  custom_pvstore.rs  custom_record.rs  exotic_nt.rs  generic_structure.rs  get_snapshot.rs  json_source.rs  linked_calc.rs  mailbox.rs  multi_source.rs  nt_put_get.rs  on_put.rs  passthrough_source.rs  rpc_source.rs  scan_callback.rs  simple_server.rs  snake.rs  store_runtime.rs  waveform.rs  wildcard_source.rs
spvirit-server/src/: apply.rs  beacon.rs  convert.rs  db.rs  decode.rs  group.rs  handler.rs  lib.rs  monitor.rs  pva_server.rs  pvstore.rs  server.rs  simple_store.rs  state.rs  types.rs
spvirit-tools/: Cargo.toml
spvirit-tools/examples/: pvget_example.rs  search_example.rs
spvirit-tools/src/: lib.rs
spvirit-tools/src/spvirit_client/: auth.rs  cli.rs  client.rs  explore.rs  mod.rs  search.rs  transport.rs  types.rs
spvirit-tools/src/spvirit_server/: db.rs  mod.rs  state.rs  types.rs
spvirit-tools/tests/: interop_epics_base.rs  interop_pipeline.rs  interop_pvaccess_java.rs  interop_tool_matrix.rs  spvirit_explore_client.rs  spvirit_get.rs  spvirit_monitor_fields.rs  spvirit_monitor_pipeline.rs  spvirit_nt_codec.rs  spvirit_nt_lifecycle.rs  spvirit_protocol_codec.rs  spvirit_protocol_lifecycle.rs  spvirit_protocol_matrix.rs  spvirit_protocol_unsupported.rs  spvirit_pvlist.rs  spvirit_record_array.rs  spvirit_search_resilience.rs
spvirit-tools/tests/interop/: epics_base.rs  harness.rs  p4p_client_test.py  p4p_pipeline_client.py  p4p_server.py
spvirit-tools/tests/protocol/: coverage_matrix.rs  frame_harness.rs  scenario_harness.rs
spvirit-types/: Cargo.toml
spvirit-types/src/: lib.rs
