[package]
name = "pva-codec"
version = "0.1.0"
edition = "2021"
description = "PVAccess protocol encode/decode and connection state tracking."
license = "BSD3-Clause"
repository = "https://gitlab.stfc.ac.uk/isis-accelerator-controls/playground/mateusz-leputa/epics-monitor-rust"
readme = "../../README.md"

[dependencies]
pva-types = { path = "../pva-types" }
hex = "0.4.3"
tracing = "0.1.41"
