[package]
name = "pva-types"
version = "0.1.0"
edition = "2021"
description = "Shared PVAccess Normative Type (NT) data model types."
license = "BSD3-Clause"
repository = "https://gitlab.stfc.ac.uk/isis-accelerator-controls/playground/mateusz-leputa/epics-monitor-rust"
readme = "../../README.md"

[dependencies]
