[package]
name = "spvirit-codec"
version = "0.1.5"
edition = "2024"
description = "PVAccess protocol encode/decode and connection state tracking."
license = "BSD-3-Clause"
repository = "https://github.com/ISISNeutronMuon/spvirit"
readme = "../README.md"
keywords = ["epics", "pvaccess"]  
categories = ["science"]
authors = ["Mateusz Leputa for ISIS Neutron and Muon Source Copyright 2026"]

[dependencies]
spvirit-types = { version = "0.1.5", path = "../spvirit-types" }
hex = "0.4.3"
tracing = "0.1.41"
