[package]
name = "spvirit-types"
version = "0.1.1"
edition = "2024"
description = "Shared PVAccess Normative Type (NT) data model types."
license = "BSD-3-Clause"
repository = "https://github.com/ISISNeutronMuon/spvirit"
readme = "../README.md"
keywords = ["epics", "pvaccess"]
categories = ["science"]
authors = ["Mateusz Leputa for ISIS Neutron and Muon Source Copyright 2026"]

[dependencies]
